--- a/src/components/Content/Content.less
+++ b/src/components/Content/Content.less
@@ -1,14 +1,25 @@
 .content {
+  max-height: calc(~"100% - 50px");
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
   .content-actions {
     display: flex;
     justify-content: space-between;
     gap: 10px;
     padding: 10px 20px;
+    height: 50px;
 
     .action-btn-group {
       display: flex;
       gap: 5px;
     }
+  }
+
+  .content-data {
+    height: calc(~"100% - 50px");
+    overflow: auto;
   }
 
   .object-content {
